--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.1",
+    "leaflet": "^1.9.4",
     "mongodb": "^5.6.0",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
