--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ryan Esmores",
   "license": "ISC",
   "dependencies": {
+    "browserslist": "> 0.5%, last 2 versions, not dead",
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
